--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
    </ul>
  </div>
 </nav>
-
+<span class="alert" hidden>Browser does not support Service worker!!</span>
 <section class="container-fluid px-0">
   <div class="row align-items-center">
     <div class="col-lg-6">
